--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>doctor_patient</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>doctor_patient</name>
-	<description>Patient booking programme </description>
+	<description>project for Spring Boot</description>
 	<properties>
 		<java.version>18</java.version>
 	</properties>
@@ -41,6 +41,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.22.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<scope>test</scope>
+			<version>5.8.2</version>
 		</dependency>
 	</dependencies>
 
